# MODEL05042026

./: .gitignore  BACKTEST_RESEARCH_PLAN.md  DECISIONS.md  JOURNAL.md  README.md  SPEC.md  STATUS.md  alerting.py  backtest.py  config.py  database.py  exchange.py  execution.py  main.py  monitor.py  pyproject.toml  reconcile.py  replay.py  report.py  runtime_monitor.py  runtime_validation.py  signal_engine.py  state.py  trade_management.py  universe.py
deploy/: SOAK_RUN.md  cache_bundle.py  install_export_sync.sh  model050426-export-sync.plist  model050426.service  outlier-detector.service  prepare_local_env.py  production.env.example  run_daily_forward_reconcile.sh  setup_windows.ps1  sync_exports.sh
tests/: test_alerting.py  test_analytics.py  test_backtest.py  test_config.py  test_deploy_helpers.py  test_exchange.py  test_execution.py  test_indicators.py  test_reconcile.py  test_replay.py  test_report.py  test_runtime_monitor.py  test_runtime_validation.py  test_signal_engine.py
